--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>portfolio</title>
-  <link rel="stylesheet" href="css/styles.css">
+<!--   <link rel="stylesheet" href="css/styles.css"> -->
+  <link rel="stylesheet" href="https://mirai2021.github.io/profile-1/style.css"/>
 </head>
 <body class="is-fixed-pagetop">
   <header>
