--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>portfolio</title>
 <!--   <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="https://mirai2021.github.io/profile-1/styles.css"/>
+  <link rel="stylesheet" href="https://mirai2021.github.io/portfolio-1/styles.css"/>
 </head>
 <body class="is-fixed-pagetop">
   <header>
